# link-glancer

./: .gitignore  README.md  pyproject.toml
packaging/: link_glancer_macos.spec  link_glancer_windows.iss  link_glancer_windows.spec
scripts/: build_macos.sh  build_macos_release.sh  build_windows.ps1  build_windows_installer.ps1  bump_creator_enrichment_version.py  generate_macos_icon.py  generate_windows_icon.py  print_public_version.py  trim_packaged_distribution.py
src/creator_collector/: __init__.py  dialog.py  exporter.py  models.py  service.py  worker_main.py
src/creator_enrichment/: __init__.py  browser_guard.py  capture_pipeline.py  constants.py  contact_badge.py  diagnostics.py  dialog.py  models.py  page_script.py  parsers.py  service.py  state.py  version.py  worker_main.py
src/link_glancer/: __init__.py  __main__.py  app.py  main.py  version.py  version_core.py
src/link_glancer/application/: __init__.py  services.py
src/link_glancer/browser/: __init__.py  base.py  detector.py  service.py
src/link_glancer/infrastructure/: __init__.py  repositories.py  workbooks.py
src/link_glancer/runtime/: __init__.py  dev.py  locks.py  paths.py
src/link_glancer/tasks/: __init__.py  database.py  defaults.py  export_fields.py  exporter.py  importer.py  models.py  screening.py  serialization.py
src/link_glancer/ui/: browser_config_advanced_dialog.py  config_manager_dialog.py  fonts.py  main_window.py  review_form.py  review_window.py  task_creation_dialog.py
src/machine_screening/: __init__.py  dialog.py  models.py  service.py
